# conversor

Desktop/Jonathan/Frequency_Changer/TranslationsTest/: CMakeLists.txt  Main.qml  main.cpp
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  appconversor_frequencias  build.ninja  qtcsettings.cmake
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/.cmake/api/v1/reply.prev/: codemodel-v2-8375543843857cee8875.json  directory-.-MinSizeRel-04b918f18790c0df4c6d.json  index-2023-04-06T12-09-43-0280.json  target-all_qmllint_json-MinSizeRel-16831f42a4e129a89496.json  target-all_qmltyperegistrations-MinSizeRel-03cf6324a196d5ce7f95.json  target-appconversor_frequencias-MinSizeRel-bd7e4f9432bb0dc7d2e0.json
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/.qtc_clangd/: compile_commands.json
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/.rcc/: appconversor_frequencias_raw_qml_0.qrc  qrc_appconversor_frequencias_raw_qml_0.cpp  qrc_qmake_conversor_frequencias.cpp
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/.rcc/qmlcache/: appconversor_frequencias_MONITOR_qml.cpp  appconversor_frequencias_booting_qml.cpp  appconversor_frequencias_bypass_qml.cpp  appconversor_frequencias_grafic_qml.cpp  appconversor_frequencias_languages_qml.cpp  appconversor_frequencias_main_qml.cpp  appconversor_frequencias_metric_qml.cpp  appconversor_frequencias_output_qml.cpp  appconversor_frequencias_qml_loader_file_list.rsp  appconversor_frequencias_qmlcache_loader.cpp  appconversor_frequencias_settings_qml.cpp  appconversor_frequencias_standby_qml.cpp  appconversor_frequencias_temperature_qml.cpp  appconversor_frequencias_testando_qml.cpp
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/appconversor_frequencias_autogen/: deps  mocs_compilation.cpp
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/appconversor_frequencias_autogen/EWIEGA46WW/: moc_dbmanager.cpp  moc_dbmanager.cpp.d  moc_dbmanager.cpp.json  moc_pcan.cpp.d  moc_timer.cpp  moc_timer.cpp.d  moc_timer.cpp.json  moc_useractivitydetector.cpp  moc_useractivitydetector.cpp.d  moc_useractivitydetector.cpp.json
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/conversor_frequencias/: MONITOR.qml  bypass.qml  languages.qml  metric.qml  output.qml  settings.qml  standby.qml
Desktop/Jonathan/Frequency_Changer/build-conversor_frequencias-Desktop_Qt_6_4_2_GCC_64bit-MinSizeRel/meta_types/: appconversor_frequencias_json_file_list.txt  appconversor_frequencias_json_file_list.txt.timestamp  qt6appconversor_frequencias_minsizerel_metatypes.json  qt6appconversor_frequencias_minsizerel_metatypes.json.gen
Desktop/Jonathan/Frequency_Changer/conversor_frequencias/: CMakeLists.txt  MONITOR.qml  bypass.qml  dbmanager.cpp  dbmanager.h  grafic.qml  includes.h  languages.qml  main.cpp  metric.qml  mytranslator.cpp  mytranslator.h  standby.qml  temperature.qml  timer.cpp  useractivitydetector.cpp  useractivitydetector.h
Desktop/Jonathan/SQL/: teste.db  teste.sqbpro
(+28 files in other folders)
